fix: links column gap in 0

--- a/assets/styles/blocks/subheader.css
+++ b/assets/styles/blocks/subheader.css
@@ -31,7 +31,7 @@
   height: 40px;
   display: flex;
   align-items: center;
-  gap: 10px;
+  /* gap: 10px; */
 
   color: var(--black-color);
   text-decoration: none;
